# python-client

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
regolo/: __init__.py  requirements.txt
regolo/client/: regolo_client.py
src/regolo/: .env  __init__.py  cli.py
src/regolo/client/: regolo_client.py
src/regolo/instance/: regolo_instance.py
src/regolo/instance/structures/: conversation_model.py
src/regolo/keys/: keys.py
src/regolo/model_registry/: registry_handler.py
src/regolo/models/: models.py
tests/: .env.example  test.py  test_regolo_client.py
