# pyproject.toml

[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=75.8", "wheel" ]

[project]
name = "regolo"
version = "1.10.0"
description = "Simple client to interact with regolo.ai"
readme = "README.md"
keywords = [ "chat", "llm", "regolo" ]
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "regolo.ai", email = "dev@regolo.ai" } ]
requires-python = ">=3.12"

classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "click",
  "httpx",
  "json-repair",
  "pillow",
  "pydantic",
  "python-dotenv",
  "requests",
]

optional-dependencies.dev = [
  "bumpver",
  "pip-tools",
  "pre-commit",
  "pytest",
  "python-dotenv",
]
optional-dependencies.imgs = [ "pillow~=11.1.0" ]
urls.Homepage = "https://github.com/regolo-ai/python-client"

scripts.regolo = "regolo.cli:cli"

[tool.bumpver]
current_version = "1.10.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  'current_version = "{version}"',
  'version = "{version}"',
  'version = "{version}"',
  'version = "{version}"',
]
"src/regolo/__init__.py" = [
  '__version__ = "{version}"',
]
